# pCI

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  amp_ops.f90  basc_aux.f90  conf.f90  conf_aux.f90  conf_init.f90  conf_pt.f90  conf_pt_aux.f90  conf_pt_variables.f90  conf_variables.f90  davidson.f90  determinants.f90  diff.f90  dtm.f90  dtm_aux.f90  formj2.f90  hamiltonian_io.f90  integrals.f90  matrix_io.f90  mpi_wins.f90  pCI.code-workspace  params.f90  pi_pk.f90  requirements.txt  str_fmt.f90  test_ori.f90  vaccumulator.f90  wigner.f90
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  main.yml
Correspondence_Code_Version_3/: Example.py  UD-Read.ipynb  UDRead.py  get_atomic_term.py  parse_asd.py
Correspondence_Code_Version_3/Backup/: UD-Read.ipynb  UDRead.py  parse_asd.py
Correspondence_Code_Version_3/DATA_Filtered/NIST/: Ca_I_NIST_Even.csv  In_I_NIST_Even.csv  In_I_NIST_Odd.csv  Sr_I_NIST_Even.csv  Sr_I_NIST_Odd.csv  Y_II_NIST_Even.csv
Correspondence_Code_Version_3/DATA_Filtered/UD/: Ca_I_UD_Even.csv  In_II_UD_Odd.csv  In_I_UD_Even.csv  In_I_UD_Odd.csv  Sr_I_UD_Even.csv  Sr_I_UD_Odd.csv  Y_II_UD_Even.csv
Correspondence_Code_Version_3/DATA_Output/: Ca_I_Odd.txt  In_I_Even.txt  In_I_Odd.txt  Sr_I_Odd.txt
Correspondence_Code_Version_3/DATA_Output/Prev/: Even.txt  Sr_I_Even.txt  Sr_I_Odd.txt
Correspondence_Code_Version_3/DATA_RAW/UD/: Ca_I_UD_Even2.RES  Ca_I_UD_Odd.RES  Cs_VII_UD_Even.RES  In_II_UD_Even.RES  In_I_UD_Even.RES  In_I_UD_Odd.RES  Sr_I_UD_Even1.RES  Sr_I_UD_Odd.RES  Y_II_UD_Odd.RES
Correspondence_Code_Version_3/DATA_RAW/UD/New Folder/: Y_I_UD_Even.RES  Y_I_UD_Odd.RES
Correspondence_Code_Version_3/Document/: Working.md
cmake/modules/: FindScaLAPACK.cmake
data/DATA_Filtered/NIST/: Ca_I_NIST_Odd.csv  In_II_NIST_Even.csv  In_II_NIST_Odd.csv  Y_II_NIST_Odd.csv
data/DATA_Filtered/UD/: Ca_I_UD_Odd.csv  In_II_UD_Even.csv  Y_II_UD_Odd.csv
data/DATA_Output/: Ca_I_Even.txt  In_II_Even.txt  In_II_Odd.txt  Sr_I_Even.txt  Y_II_Even.txt  Y_II_Odd.txt
data/DATA_Output/Prev/: Ca_I_Even.txt  Ca_I_Odd.txt  Odd.txt
data/DATA_RAW/UD/: Ca_I_UD_Even.RES  Ca_I_UD_Odd2.RES  Cs_VII_UD_Odd.RES  In_II_UD_Odd.RES  Y_II_UD_Even.RES
data/DATA_RAW/UD/New Folder/: Sr_I_UD_Even.RES
docs/: Makefile  README.md  README.rst  about.rst  all-order.rst  basis_x.rst  citation.rst  conf.py  example_hci.rst  example_neutral.rst  index.rst  installation.rst  isotope_shifts.rst  parallel_codes.rst  pci-py-example.rst  pci-py.rst  pci.rst  portal_codes.rst  publications.md  qed.rst  radial_grid.rst  refs.bib  requirements.txt  supplementary.rst  theory.rst  ud_instructions.rst  upscaling.rst
docs/correspondence_code/: To_Run.md  Working.md
docs/examples/: hci.rst  neutral.rst  pci-py-sr.rst  portal-sr.rst
docs/extensions/: all-order.rst  basis.rst  index.rst  second-order.rst
docs/parallel_codes/: basc.rst  conf.rst  dtm.rst  index.rst  ine.rst
docs/pci/: add.rst  basc.rst  bass.rst  conf.rst  dtm.rst  hfd.rst  index.rst  ine.rst  pbasc.rst  pconf.rst  pdtm.rst  pol.rst
docs/src/: config_Sr.yml  openmpi.qs  serial.qs
lib/: Makefile
lib/all-order/: Makefile  allcore-ci.f  bas_wj.for  bas_x.for  sdvw-ci.f  second-ci.f  second-cis.f  valsd-ci.f
lib/all-order/basis/: params.md
lib/all-order/basis/bdhf/: bdhf.f  rint.f  wint.f  yfun1.f  yint1.f  zint.f
lib/all-order/basis/bspl/: bspl.f  bsplvb.f  bsplvd.f  bvalue.f  clrx.f  cre.f  gauss.f  interv.f  wfun.f  yfun1.f  yint1.f
lib/all-order/basis/nspl/: bsplvb.f  bsplvd.f  bvalue.f  nspl.f  rint.f  rsg.f  spl.in
lib/all-order/basis/tdhf/: enclab.f  rint.f  tdhf.f  yfun.f  yint.f  zfun.f  zint.f
lib/all-order/include/: all.par  allvw.par  basx.par  bspl.inc  d6j.f  global.par  inidat.f  libD.f  linpakd.f  rint.f  rintms.f  second-cis.par  second.par  yfun.f  yint.f
lib/include/: bas1.inc  breit.inc  cfnc.inc  check_dim.inc  conf.par  decomp.inc  dif.inc  eval.inc  hfd.par  hould.inc  i_diag.inc  phys.par  pi_pk.inc  readf.inc  readff.inc  rec_unit.inc  rp2.inc  sg1.inc  sint1.inc  test_ori.inc  wig.inc  yk.inc  ykt.inc
lib/qed/: Makefile  qed_rot.for  qedpot_conf.for  sgc.for  sgc0.f
lib/rpa/: Makefile  rpa.for  rpa.par  rpa_dtm.for
py-lib/: UDRead.py  add.py  add.yml  atomic_term_symbol.py  basis.py  basis.yml  calc_lifetimes.py  ci.py  compare_lines.py  compare_res.py  config.yml  config_Al+_portal.yml  config_Fe16+.yml  config_Sr.yml  create_add_inp.py  create_add_yml.py  create_conf_inp.py  dtm.py  find_missing_terms.py  gen_job_script.py  gen_portal_csv.py  gen_rates_lifetimes.py  get_atomic_data.py  get_atomic_term.py  get_excitations.py  isotope_shifts.py  orbitals.py  parse_asd.py  parse_sys.py  pol.py  read_bass.py  run_ci.py  set_min_uncertainties.py  sort.py  theory_lifetimes.py  upscale.py  utils.py  write_job_script.py
py-lib/basis/: bas_wj.in  inf.aov  inf.vw  spl.in
src/: CMakeLists.txt  add.f90  amp_ops.f90  basc.f90  basc_aux.f90  basc_variables.f90  bass.f90  breit.f90  bspl.f90  check_matrices.f90  conf.f90  conf_aux.f90  conf_init.f90  conf_lsj.f90  conf_pt.f90  conf_pt_aux.f90  conf_variables.F90  conf_variables.f90  conffilepaths.f90  csf.f90  davidson.f90  determinants.f90  diff.f90  dtm.f90  dtm_aux.f90  dtm_variables.f90  env_var.f90  formj2.f90  formy.f90  hamiltonian_io.f90  hfd.f90  ine.f90  ine_aux.f90  ine_variables.f90  integrals.f90  lsj_aux.f90  matrix_io.f90  mpi_utils.f90  mpi_wins.f90  params.f90  (+16 more)
src/auxiliary/: sort.md  sort.py
